fix i documentation och en link till källkoden