@@ -39,17 +39,17 @@ se.skltp.cooperation.api_key=abcd
 > api_key kan sättas till valfri sträng
 
 
-> - Konfigurera Tomcat-environment variabler
-> Lägg till dessa i TOMCAT_HOME/bin/setenv.sh eller motsvarande:
+> - Konfigurera Tomcat-environment variabler i environment fil
 ```
-export CATALINA_OPTS="$CATALINA_OPTS -Dspring.profiles.active=prod"
-export CATALINA_OPTS="$CATALINA_OPTS -Dapp.conf.dir=/opt/tomcat/conf/"
+CATALINA_OPTS="-Xms1024m -Xmx2048m -XX:NewSize=256m -XX:PermSize=128m -XX:MaxPermSize=512m -Dspring.profiles.active=production -Dapp.conf.dir=/var/spool/tomcat/cooperation/etc"
 ```
 > där den sista variabeln ska peka på den konfig-katalog som skapades i steg 5 ovan.
 
 > - Deploya WAR-filen i Tomcat
-/www/inera/releases/cooperation-1.1.0.war
-> Den externt exponerade contextroot skall vara coop för att den interaktiva api-dokumentation mha swagger skall fungera, tex genom att döpa om filen till coop.war innan deployment.
+
+> symlink /www/ind/war/cooperation/coop.war ska peka på ny cooperation version
+
+> starta om tomcat  
 
 > - Verifiera deployment
 > Öppna webläsare 
